チャンクの事前生成